Punch list. Sample name render bug (squished mode). Multi-locus labels.

--- a/css/_dom-misc.scss
+++ b/css/_dom-misc.scss
@@ -107,7 +107,7 @@
   font-weight: 400;
 
   text-align: center;
-  width: fit-content;
+  //width: fit-content;
 
   z-index:64;
 
