--- a/css/dom.css
+++ b/css/dom.css
@@ -303,7 +303,6 @@
   font-size: 12px;
   font-weight: 400;
   text-align: center;
-  width: fit-content;
   z-index: 64;
   color: #373737;
   background-color: white;
